fixed spacing issue

--- a/css/state.css
+++ b/css/state.css
@@ -11,7 +11,8 @@
 	}
 
 	#map_container {
-		margin-top: 0;
+		margin-bottom: 0;
+		margin-top: 10px;
 	}
 
 	#important_container {
